Fix dark mode

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -57,6 +57,6 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
-    --system-border: 94 29% 90%;
+    --system-border: 215 27.9% 16.9%;
   }
 }
